# scrapper_global_firepower

scrapper_global_firepower/: README.md
scrapper_global_firepower/yana/: README.md  docker-compose.yml  pyproject.toml  run_spider_man_power_all_countries.py  scrapy.cfg
scrapper_global_firepower/yana/fire_power_scraper/: Dockerfile  items.py  main.py  middlewares.py  models.py  pipelines.py  settings.py
scrapper_global_firepower/yana/fire_power_scraper/spiders/: man_power_all_countries.py  man_power_by_id.py
