[tool.poetry]
name = "yana"
version = "0.1.0"
description = ""
authors = ["y.shurpik <y.shurpik@clearcode.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
Scrapy = "^2.6.3"
SQLAlchemy = "^1.4.41"
black = "^22.10.0"
mysql-connector-python = "^8.0.31"
PyMySQL = "^1.0.2"
mysql = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
